UI looks better

--- a/prompt/views/index.ejs
+++ b/prompt/views/index.ejs
@@ -31,10 +31,15 @@
 
         <div class="row" style="display: flex;">
 
-            <div class="col" style="float: left;">
-                <p>Yes, writing is hard. 
+            <div class="col" style="float: left; text-align: left;">
+                <h4 class="title" style="margin-left: auto; margin-right:auto; width:60%">
+                Yes, writing is hard. 
                 <br/>
-                </p>
+                We all have Writer's blocks.
+                <br/>
+                <br/>
+                prompts is a tool to get your creative juices flowing and to pull you out of your writer's block
+                </h4>
             </div>
 
             <div class="col" style="text-align: center; padding-top:2em; padding-right:auto; padding-left:auto;">
@@ -44,8 +49,10 @@
         </div>
 
         <div class="row">
-            <p> Helooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooooo</p>
-
+            <h4 class="title" style="margin-left: auto; margin-right:auto; width:80%; text-align:center;">
+                Prompts works by fetching posts from <span><a target="_blank" href="https://reddit.com/r/WritingPrompts">r/WritingPrompts</a></span> 
+                and starts a story which you can complete writing.  
+            </h4>
         </div>
 
     </div>
@@ -55,8 +62,8 @@
     <br/>
 
     
-    <div style="width: 60%; text-align:center; margin-left:auto; margin-right:auto;">
-        <textarea id='promptText' style="width: 100%; height:100px;"></textarea>
+    <div style="width: 80%; text-align:center; margin-left:auto; margin-right:auto;">
+        <textarea id='promptText' style="width: 100%; height:500px; font-size:xx-large"></textarea>
 
     </div>
 
