Centered text area

--- a/prompt/views/index.ejs
+++ b/prompt/views/index.ejs
@@ -43,7 +43,7 @@
             </div>
 
             <div class="col" style="text-align: center; padding-top:2em; padding-right:auto; padding-left:auto;">
-                <img src="./messy.png" style="width:80%; height:auto; margin-left:auto; margin-right:auto;">
+                <img src="https://i.imgur.com/jxZPMOW.png" style="width:80%; height:auto; margin-left:auto; margin-right:auto;">
             </div>
 
         </div>
@@ -62,9 +62,8 @@
     <br/>
 
     
-    <div style="width: 80%; text-align:center; margin-left:auto; margin-right:auto;">
+    <div class="row" style="width: 80%; margin-left:auto; margin-right:auto;">
         <textarea id='promptText' style="width: 100%; height:500px; font-size:xx-large"></textarea>
-
     </div>
 
     <a href="https://deta.sh/" target="_blank" class="w-inline-block w-clearfix powered-by" style="background-color: rgb(246, 246, 246);">
