--- a/prompt/views/index.ejs
+++ b/prompt/views/index.ejs
@@ -21,7 +21,7 @@
     height: 100%;
     min-width: 50px;
     max-width: 1300px;
-    margin: 0 auto;""> 
+    margin: 0 auto;"> 
 
         <div class="row" style="padding-left:5em; padding-right:5em; padding-top:2.5em;">
             <h1 id="title" style=" width:100%; text-align: center;"></h1>
