--- a/prompt/views/index.ejs
+++ b/prompt/views/index.ejs
@@ -3,15 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prompts</title>
+    <title>prompts</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://unpkg.com/wingcss"/>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     
     <br/>
-    <div style="
+    <div id="titleCard" style="
     background-color:white;
+    display:block;
+    opacity:1;
+    transition : all .3s;
+    -wekit-transition : all .3s;
+    -moz-transition : all .3s;
     border:0.3em;
     border-style:solid;
     border-radius:0.5em;
@@ -35,7 +41,7 @@
                 <h4 class="title" style="margin-left: auto; margin-right:auto; width:60%">
                 Yes, writing is hard. 
                 <br/>
-                We all have Writer's blocks.
+                We all get writer's blocks.
                 <br/>
                 <br/>
                 prompts is a tool to get your creative juices flowing and to pull you out of your writer's block
@@ -49,10 +55,11 @@
         </div>
 
         <div class="row" style="padding-top: 0px; padding-bottom:0px;">
-            <h4 class="title" style="margin-left: auto; margin-right:auto; width:80%; text-align:center;">
+            <h5 class="title" style="margin-left: auto; margin-right:auto; width:80%; text-align:center; margin-bottom:10px; margin-top:20px;">
                 Prompts works by fetching posts from <span><a target="_blank" href="https://reddit.com/r/WritingPrompts">r/WritingPrompts</a></span> 
-                and starts a story which you can complete writing.  
-            </h4>
+                and starts a story for you which you can continue writing. There are options to make it more challenging 
+                by adding a countdown timer or you can write at your pace and export the story
+            </h5>
         </div>
 
         <div class="row" style="padding-top: 0px; padding-bottom:0px; text-align:center">
@@ -65,24 +72,125 @@
 
     </div>
 
-    <br/>
-    <br/>
     
 
 
     
-    <div id="textArea" class="row" style="display:none; width: 80%; margin-left:auto; margin-right:auto;">
-        <textarea id='promptText' style="width: 100%; height:500px; font-size:xx-large"></textarea>
+    <div id="textArea" class="row" style="
+    display:none;
+    width: 80%;
+    margin-left:auto;
+    margin-right:auto;">
+
+        <div class="row">
+            <textarea id='promptText' style="
+            width: 100%; 
+            font-size:xx-large;
+            position:relative;
+            height:100%;
+            z-index: 1;
+            min-height: 500px;
+            max-height: 900px;
+            min-width: 50px;
+            max-width: 1300px;
+            margin: 0 auto;"
+            ></textarea>
+        </div>
+
+        <div class="row" 
+        style="width: fit-content;
+        margin-left:auto;
+        margin-right:auto;
+        padding-bottom:0px;">
+            <button id="timerButton" style="margin-right: 10px;">
+                Set Timer
+            </button>
+            <button id="exportButton" style="margin-right: 10px;">
+                Export Story
+            </button>
+            <button id="reloadButton" style="margin-right: 10px;">
+                Get Another Prompt
+            </button>
+            <button id="homeButton" style="margin-right: 10px;">
+                Go Back Home
+            </button>
+        </div>
+
+        <div class="row" 
+        style="width: fit-content;
+        margin-left:auto;
+        margin-right:auto;
+        padding-top:0px;
+        padding-bottom:0px;">
+        <h5 style="margin-top:0px; margin-bottom:0px;">Share prompts</h5>
+        </div>
+        <div class="row" 
+        style="width: fit-content;
+        margin-left:auto;
+        margin-right:auto;
+        padding-top:0px;">
+            <!-- Sharingbutton Facebook -->
+            <a class="resp-sharing-button__link" href="https://facebook.com/sharer/sharer.php?u=https%3A%2F%2Fprompts.deta.dev" target="_blank" rel="noopener" aria-label="">
+                <div class="resp-sharing-button resp-sharing-button--facebook resp-sharing-button--small"><div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18.77 7.46H14.5v-1.9c0-.9.6-1.1 1-1.1h3V.5h-4.33C10.24.5 9.5 3.44 9.5 5.32v2.15h-3v4h3v12h5v-12h3.85l.42-4z"/></svg>
+                </div>
+                </div>
+            </a>
+            
+            <!-- Sharingbutton Twitter -->
+            <a class="resp-sharing-button__link" href="https://twitter.com/intent/tweet/?text=Checkout%20prompts%2C%20a%20simple%20app%20that%20helps%20you%20improve%20your%20writing%20skills%20by%20fetching%20story%20prompts%20from%20the%20r%2FWritingPrompts%20subreddit%20for%20you%20to%20practise%20writing%20on.%20Powered%20By%20Deta&amp;url=https%3A%2F%2Fprompts.deta.dev" target="_blank" rel="noopener" aria-label="">
+                <div class="resp-sharing-button resp-sharing-button--twitter resp-sharing-button--small"><div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M23.44 4.83c-.8.37-1.5.38-2.22.02.93-.56.98-.96 1.32-2.02-.88.52-1.86.9-2.9 1.1-.82-.88-2-1.43-3.3-1.43-2.5 0-4.55 2.04-4.55 4.54 0 .36.03.7.1 1.04-3.77-.2-7.12-2-9.36-4.75-.4.67-.6 1.45-.6 2.3 0 1.56.8 2.95 2 3.77-.74-.03-1.44-.23-2.05-.57v.06c0 2.2 1.56 4.03 3.64 4.44-.67.2-1.37.2-2.06.08.58 1.8 2.26 3.12 4.25 3.16C5.78 18.1 3.37 18.74 1 18.46c2 1.3 4.4 2.04 6.97 2.04 8.35 0 12.92-6.92 12.92-12.93 0-.2 0-.4-.02-.6.9-.63 1.96-1.22 2.56-2.14z"/></svg>
+                </div>
+                </div>
+            </a>
+            
+            <!-- Sharingbutton Reddit -->
+            <a class="resp-sharing-button__link" href="https://reddit.com/submit/?url=https%3A%2F%2Fprompts.deta.dev&amp;resubmit=true&amp;title=Checkout%20prompts%2C%20a%20simple%20app%20that%20helps%20you%20improve%20your%20writing%20skills%20by%20fetching%20story%20prompts%20from%20the%20r%2FWritingPrompts%20subreddit%20for%20you%20to%20practise%20writing%20on.%20Powered%20By%20Deta" target="_blank" rel="noopener" aria-label="">
+                <div class="resp-sharing-button resp-sharing-button--reddit resp-sharing-button--small"><div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M24 11.5c0-1.65-1.35-3-3-3-.96 0-1.86.48-2.42 1.24-1.64-1-3.75-1.64-6.07-1.72.08-1.1.4-3.05 1.52-3.7.72-.4 1.73-.24 3 .5C17.2 6.3 18.46 7.5 20 7.5c1.65 0 3-1.35 3-3s-1.35-3-3-3c-1.38 0-2.54.94-2.88 2.22-1.43-.72-2.64-.8-3.6-.25-1.64.94-1.95 3.47-2 4.55-2.33.08-4.45.7-6.1 1.72C4.86 8.98 3.96 8.5 3 8.5c-1.65 0-3 1.35-3 3 0 1.32.84 2.44 2.05 2.84-.03.22-.05.44-.05.66 0 3.86 4.5 7 10 7s10-3.14 10-7c0-.22-.02-.44-.05-.66 1.2-.4 2.05-1.54 2.05-2.84zM2.3 13.37C1.5 13.07 1 12.35 1 11.5c0-1.1.9-2 2-2 .64 0 1.22.32 1.6.82-1.1.85-1.92 1.9-2.3 3.05zm3.7.13c0-1.1.9-2 2-2s2 .9 2 2-.9 2-2 2-2-.9-2-2zm9.8 4.8c-1.08.63-2.42.96-3.8.96-1.4 0-2.74-.34-3.8-.95-.24-.13-.32-.44-.2-.68.15-.24.46-.32.7-.18 1.83 1.06 4.76 1.06 6.6 0 .23-.13.53-.05.67.2.14.23.06.54-.18.67zm.2-2.8c-1.1 0-2-.9-2-2s.9-2 2-2 2 .9 2 2-.9 2-2 2zm5.7-2.13c-.38-1.16-1.2-2.2-2.3-3.05.38-.5.97-.82 1.6-.82 1.1 0 2 .9 2 2 0 .84-.53 1.57-1.3 1.87z"/></svg>
+                </div>
+                </div>
+            </a>
+            
+            <!-- Sharingbutton WhatsApp -->
+            <a class="resp-sharing-button__link" href="whatsapp://send?text=Checkout%20prompts%2C%20a%20simple%20app%20that%20helps%20you%20improve%20your%20writing%20skills%20by%20fetching%20story%20prompts%20from%20the%20r%2FWritingPrompts%20subreddit%20for%20you%20to%20practise%20writing%20on.%20Powered%20By%20Deta%20https%3A%2F%2Fprompts.deta.dev" target="_blank" rel="noopener" aria-label="">
+                <div class="resp-sharing-button resp-sharing-button--whatsapp resp-sharing-button--small"><div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
+                <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M20.1 3.9C17.9 1.7 15 .5 12 .5 5.8.5.7 5.6.7 11.9c0 2 .5 3.9 1.5 5.6L.6 23.4l6-1.6c1.6.9 3.5 1.3 5.4 1.3 6.3 0 11.4-5.1 11.4-11.4-.1-2.8-1.2-5.7-3.3-7.8zM12 21.4c-1.7 0-3.3-.5-4.8-1.3l-.4-.2-3.5 1 1-3.4L4 17c-1-1.5-1.4-3.2-1.4-5.1 0-5.2 4.2-9.4 9.4-9.4 2.5 0 4.9 1 6.7 2.8 1.8 1.8 2.8 4.2 2.8 6.7-.1 5.2-4.3 9.4-9.5 9.4zm5.1-7.1c-.3-.1-1.7-.9-1.9-1-.3-.1-.5-.1-.7.1-.2.3-.8 1-.9 1.1-.2.2-.3.2-.6.1s-1.2-.5-2.3-1.4c-.9-.8-1.4-1.7-1.6-2-.2-.3 0-.5.1-.6s.3-.3.4-.5c.2-.1.3-.3.4-.5.1-.2 0-.4 0-.5C10 9 9.3 7.6 9 7c-.1-.4-.4-.3-.5-.3h-.6s-.4.1-.7.3c-.3.3-1 1-1 2.4s1 2.8 1.1 3c.1.2 2 3.1 4.9 4.3.7.3 1.2.5 1.6.6.7.2 1.3.2 1.8.1.6-.1 1.7-.7 1.9-1.3.2-.7.2-1.2.2-1.3-.1-.3-.3-.4-.6-.5z"/></svg>
+                </div>
+                </div>
+            </a>
+            
+            <!-- Sharingbutton Hacker News -->
+            <a class="resp-sharing-button__link" href="https://news.ycombinator.com/submitlink?u=https%3A%2F%2Fprompts.deta.dev&amp;t=Checkout%20prompts%2C%20a%20simple%20app%20that%20helps%20you%20improve%20your%20writing%20skills%20by%20fetching%20story%20prompts%20from%20the%20r%2FWritingPrompts%20subreddit%20for%20you%20to%20practise%20writing%20on.%20Powered%20By%20Deta" target="_blank" rel="noopener" aria-label="">
+                <div class="resp-sharing-button resp-sharing-button--hackernews resp-sharing-button--small"><div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
+                        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 140 140"><path fill-rule="evenodd" d="M60.94 82.314L17 0h20.08l25.85 52.093c.397.927.86 1.888 1.39 2.883.53.994.995 2.02 1.393 3.08.265.4.463.764.596 1.095.13.334.262.63.395.898.662 1.325 1.26 2.618 1.79 3.877.53 1.26.993 2.42 1.39 3.48 1.06-2.254 2.22-4.673 3.48-7.258 1.26-2.585 2.552-5.27 3.877-8.052L103.49 0h18.69L77.84 83.308v53.087h-16.9v-54.08z"></path></svg>
+                </div>
+                </div>
+            </a>
+            
+            <!-- Sharingbutton Telegram -->
+            <a class="resp-sharing-button__link" href="https://telegram.me/share/url?text=Checkout%20prompts%2C%20a%20simple%20app%20that%20helps%20you%20improve%20your%20writing%20skills%20by%20fetching%20story%20prompts%20from%20the%20r%2FWritingPrompts%20subreddit%20for%20you%20to%20practise%20writing%20on.%20Powered%20By%20Deta&amp;url=https%3A%2F%2Fprompts.deta.dev" target="_blank" rel="noopener" aria-label="">
+                <div class="resp-sharing-button resp-sharing-button--telegram resp-sharing-button--small"><div aria-hidden="true" class="resp-sharing-button__icon resp-sharing-button__icon--solid">
+                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M.707 8.475C.275 8.64 0 9.508 0 9.508s.284.867.718 1.03l5.09 1.897 1.986 6.38a1.102 1.102 0 0 0 1.75.527l2.96-2.41a.405.405 0 0 1 .494-.013l5.34 3.87a1.1 1.1 0 0 0 1.046.135 1.1 1.1 0 0 0 .682-.803l3.91-18.795A1.102 1.102 0 0 0 22.5.075L.706 8.475z"/></svg>
+                </div>
+                </div>
+            </a>
+  
+        </div>
+
     </div>
 
-    <br/>
-    <br/>
-    <a href="https://deta.sh/" target="_blank" class="w-inline-block w-clearfix powered-by" style="background-color: rgb(246, 246, 246);">
+    
+    
+    
+    <a id="detaBanner" href="https://deta.sh/" target="_blank" class="deta w-inline-block w-clearfix powered-by" style="background-color: rgb(246, 246, 246);">
         <svg class="devolio-logo" width="40" height="40" xmlns="http://www.w3.org/2000/svg"><path fill="none" d="M-1-1h42v42H-1z"></path><g><g stroke="null"><circle fill="#ef39a8" r="18.801" cy="20" cx="20"></circle><circle fill="#bd399c" r="15.042" cy="20" cx="20"></circle><circle fill="#93388e" r="11.281" cy="20" cx="20"></circle><circle fill="#563379" r="7.521" cy="20" cx="20"></circle></g></g></svg>
         <div class="by-devolio">Powered by
         <span class="devolio">DETA</span>
         </div>
     </a>
+     
     
 
     <script src="js/main.js"></script>
