Added home and reload buttons

--- a/prompt/views/index.ejs
+++ b/prompt/views/index.ejs
@@ -79,6 +79,10 @@
     <div id="textArea" class="row" style="
     display:none;
     width: 80%;
+    transition : all .3s;
+    -wekit-transition : all .3s;
+    -moz-transition : all .3s;
+    opacity:0;
     margin-left:auto;
     margin-right:auto;">
 
