Added color and fixed banner

--- a/prompt/views/index.ejs
+++ b/prompt/views/index.ejs
@@ -56,7 +56,7 @@
 
         <div class="row" style="padding-top: 0px; padding-bottom:0px;">
             <h5 class="title" style="margin-left: auto; margin-right:auto; width:80%; text-align:center; margin-bottom:10px; margin-top:20px;">
-                Prompts works by fetching posts from <span><a target="_blank" href="https://reddit.com/r/WritingPrompts">r/WritingPrompts</a></span> 
+                Prompts works by fetching posts from <span><a class="mainLinks" target="_blank" href="https://reddit.com/r/WritingPrompts">r/WritingPrompts</a></span> 
                 and starts a story for you which you can continue writing. There are options to make it more challenging 
                 by adding a countdown timer or you can write at your pace and export the story
             </h5>
