--- a/prompt/views/index.ejs
+++ b/prompt/views/index.ejs
@@ -37,7 +37,7 @@
 
         <div class="row" style="display: flex; padding-top: 0px; padding-bottom:0px;">
 
-            <div class="col" style="float: left; text-align: left;">
+            <div class="col" style="float: left; text-align:left;">
                 <h4 class="title" style="margin-left: auto; margin-right:auto; width:60%">
                 Yes, writing is hard. 
                 <br/>
@@ -109,8 +109,8 @@
             <button id="timerButton" style="margin-right: 10px;">
                 Set Timer
             </button>
-            <button id="exportButton" style="margin-right: 10px;">
-                Export Story
+            <button id="exportButton" style="margin-right: 10px;"> 
+                <a download='story.txt' id='exportLink' class='buttonLink'>Export Story</a>
             </button>
             <button id="reloadButton" style="margin-right: 10px;">
                 Get Another Prompt
