Typing speed (Need to check)

--- a/prompt/views/index.ejs
+++ b/prompt/views/index.ejs
@@ -111,7 +111,7 @@
         margin-right:auto;
         padding-top:0px;">
             <h5 style="float:left; color:rgb(112, 112, 112); margin-top:0px; margin-bottom:0px; "> <span id="minutes">00</span> : <span id="seconds">00</span> </h5>
-            <h5 style="float:right; color:rgb(112, 112, 112); margin-top:0px; margin-bottom:0px;"><span id="wpm"></span> Words per minute</h5>
+            <h5 style="float:right; color:rgb(112, 112, 112); margin-top:0px; margin-bottom:0px;">Max typing speed : <span id="wpm">0</span> wpm</h5>
         </div>
 
         <div class="row" 
