Changed colors, Added credits

--- a/prompt/views/index.ejs
+++ b/prompt/views/index.ejs
@@ -56,9 +56,9 @@
 
         <div class="row" style="padding-top: 0px; padding-bottom:0px;">
             <h5 class="title" style="margin-left: auto; margin-right:auto; width:80%; text-align:center; margin-bottom:10px; margin-top:20px;">
-                Prompts works by fetching posts from <span><a class="mainLinks" target="_blank" href="https://reddit.com/r/WritingPrompts">r/WritingPrompts</a></span> 
-                and starts a story for you which you can continue writing. There are options to make it more challenging 
-                by adding a countdown timer or you can write at your pace and export the story
+                prompts works by fetching posts from the <span><a class="mainLinks" target="_blank" href="https://reddit.com/r/WritingPrompts">r/WritingPrompts</a></span> 
+                subreddit and starts a story for you which you can continue writing. There are several options such as to challenge yourself with a timer 
+                or you can write at your own pace and export the story to your device
             </h5>
         </div>
 
@@ -143,6 +143,7 @@
         padding-bottom:0px;">
         <h5 style="margin-top:0px; margin-bottom:0px;">Share prompts</h5>
         </div>
+
         <div class="row" 
         style="width: fit-content;
         margin-left:auto;
@@ -196,6 +197,17 @@
                 </div>
             </a>
   
+        </div>
+
+
+        <div class="row" 
+        style="width: fit-content;
+        margin-left:auto;
+        margin-right:auto;
+        margin-top:0px;
+        margin-bottom:0px;
+        padding-top:0px;">
+            <h5 style="margin-top: 0px; margin-bottom:0px;">Made by <span ><a style="padding:3px;" class="mainLinks" target="_blank" href="https://twitter.com/fillerInk">fillerInk</a></span></h5>
         </div>
 
     </div>
