--- a/prompt/views/index.ejs
+++ b/prompt/views/index.ejs
@@ -20,6 +20,8 @@
 <body>
     
     <br/>
+
+    
     <div id="titleCard" style="
     background-color:white;
     display:block;
@@ -74,6 +76,11 @@
         <div class="row" style="padding-top: 0px; padding-bottom:0px; text-align:center">
             <button id="startButton" style="margin-left:auto; margin-right:auto;">🚀 Get Started!</button>
         </div>
+
+        <div class="row" style="padding-top: 0px; padding-bottom:0px; text-align:center">
+            <div class="row" style="padding-top: 0px; padding-bottom:0px; text-align:center">
+                <button id="startButton" style="margin-left:auto; margin-right:auto;">🚀 Get Started!</button>
+            </div>        </div>
         <br/>
 
 
