--- a/prompt/views/index.ejs
+++ b/prompt/views/index.ejs
@@ -73,16 +73,17 @@
             </h5>
         </div>
 
-        <div class="row" style="padding-top: 0px; padding-bottom:0px; text-align:center">
+        <div class="row" style="padding-top: 0px; padding-bottom:0px; text-align:center; margin-bottom:10px;">
             <button id="startButton" style="margin-left:auto; margin-right:auto;">🚀 Get Started!</button>
         </div>
 
         <div class="row" style="padding-top: 0px; padding-bottom:0px; text-align:center">
-            <div class="row" style="padding-top: 0px; padding-bottom:0px; text-align:center">
-                <button id="startButton" style="margin-left:auto; margin-right:auto;">🚀 Get Started!</button>
-            </div>        </div>
-        <br/>
+            <a style="margin-left:auto; margin-right:auto;" href="https://www.producthunt.com/posts/prompts-2?utm_source=badge-top-post-badge&utm_medium=badge&utm_souce=badge-prompts-2" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/top-post-badge.svg?post_id=213247&theme=dark&period=daily" alt="Prompts - A writing app to make you more creative | Product Hunt Embed" style="width: 250px; height: 54px;" width="250px" height="54px" /></a>
+        </div>
 
+    
+
+        <br/>
 
 
 
