--- a/prompt/views/index.ejs
+++ b/prompt/views/index.ejs
@@ -78,10 +78,18 @@
         </div>
 
         <div class="row" style="padding-top: 0px; padding-bottom:0px; text-align:center">
-            <a style="margin-left: auto; margin-right:auto" href="https://www.producthunt.com/posts/prompts-2?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-prompts-2" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=213247&theme=dark" alt="Prompts - A writing app to make you more creative | Product Hunt Embed" style="width: 250px; height: 54px;" width="250px" height="54px" /></a>        </div>
+            <a style="margin-left: auto; margin-right:auto" href="https://www.producthunt.com/posts/prompts-2?utm_source=badge-featured&utm_medium=badge&utm_souce=badge-prompts-2" target="_blank"><img src="https://api.producthunt.com/widgets/embed-image/v1/featured.svg?post_id=213247&theme=dark" alt="Prompts - A writing app to make you more creative | Product Hunt Embed" style="width: 250px; height: 54px;" width="250px" height="54px" /></a>
+        </div>
+        <br/>
 
-    
-
+        <!-- <div class="row" style="padding-top: 0px; padding-bottom:0px; text-align:center">
+            <a id="detaBanner" href="https://deta.sh/" target="_blank" class="deta w-inline-block w-clearfix powered-by" style="background-color: rgb(246, 246, 246);">
+                <svg class="devolio-logo" width="40" height="40" xmlns="http://www.w3.org/2000/svg"><path fill="none" d="M-1-1h42v42H-1z"></path><g><g stroke="null"><circle fill="#ef39a8" r="18.801" cy="20" cx="20"></circle><circle fill="#bd399c" r="15.042" cy="20" cx="20"></circle><circle fill="#93388e" r="11.281" cy="20" cx="20"></circle><circle fill="#563379" r="7.521" cy="20" cx="20"></circle></g></g></svg>
+                <div class="by-devolio">Powered by
+                <span class="devolio">DETA</span>
+                </div>
+            </a>        
+        </div> -->
         <br/>
 
 
@@ -99,6 +107,7 @@
     -wekit-transition : all .3s;
     -moz-transition : all .3s;
     opacity:0;
+    z-index: inherit 1;
     text-align:center;
     margin-left:auto;
     margin-right:auto;">
@@ -109,7 +118,6 @@
             font-size:xx-large;
             position:relative;
             height:100%;
-            z-index: 1;
             min-height: 500px;
             max-height: 900px;
             min-width: 50px;
@@ -232,14 +240,14 @@
 
     
     
-    
-    <a id="detaBanner" href="https://deta.sh/" target="_blank" class="deta w-inline-block w-clearfix powered-by" style="background-color: rgb(246, 246, 246);">
+    <div class="row" style="width: max-content; margin-left:auto; margin-right:0px;">
+    <a id="detaBanner" href="https://deta.sh/" target="_blank" class="deta w-inline-block w-clearfix powered-by" style="background-color: rgb(246, 246, 246); z-index:2; bottom:0px;">
         <svg class="devolio-logo" width="40" height="40" xmlns="http://www.w3.org/2000/svg"><path fill="none" d="M-1-1h42v42H-1z"></path><g><g stroke="null"><circle fill="#ef39a8" r="18.801" cy="20" cx="20"></circle><circle fill="#bd399c" r="15.042" cy="20" cx="20"></circle><circle fill="#93388e" r="11.281" cy="20" cx="20"></circle><circle fill="#563379" r="7.521" cy="20" cx="20"></circle></g></g></svg>
         <div class="by-devolio">Powered by
         <span class="devolio">DETA</span>
         </div>
     </a>
-     
+    </div> 
     
 
     <script src="js/main.js"></script>
